--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -22,6 +22,22 @@
   margin-bottom: 1% !important;
 }
 
+.scrollTopButton {
+  position: fixed !important;
+  bottom: 24px !important;
+  right: 2% !important;
+  z-index: 1500 !important;
+  background-color: #d33252 !important;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2) !important;
+  border-radius: 50% !important;
+  transition: background-color 0.3s ease !important;
+  color: #272727 !important;
+}
+
+.scrollTopButton:hover {
+  color: #f5f5f5 !important;
+}
+
 @media (max-width: 600px) {
   .containerHeader {
     padding-top: 5% !important;
